test/conformance/chainsaw/globalcontext/gctxentry-not-exist/clusterpolicy-ready.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-gctxentry-not-exist
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
