test/conformance/chainsaw/globalcontext/gctxentry-not-exist/clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: cpol-gctxentry-not-exist
spec:
  failurePolicy: Fail
  rules:
  - name: main-deployment-exists
    context:
    - name: deploymentCount
      globalReference:
        name: gctxentry-gctxentry-not-exist
        jmesPath: "items | length(@)"
    match:
      all:
      - resources:
          kinds:
          - Pod
    preconditions:
      all:
      - key: '{{ request.operation }}'
        operator: AnyIn
        value:
        - CREATE
        - UPDATE
    validate:
      failureAction: Enforce
      deny:
        conditions:
          any:
          - key: "{{ deploymentCount }}"
            operator: Equal
            value: 0
