test/conformance/chainsaw/globalcontext/gctxentry-not-exist/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test-globalcontext
